// SPDX-FileCopyrightText: 2024 Shun Sakai
//
// SPDX-License-Identifier: Apache-2.0 OR MIT

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/xbm-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2024-10-26

=== Changed

* Change `Encoder::encode` and `Decoder::decode` to generic methods
  ({pull-request-url}/5[#5])
* Re-export `image` crate ({pull-request-url}/7[#7])
* Check if `name` follow the specification in UAX31 ({pull-request-url}/13[#13])

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2024-10-14

=== Added

* Initial release