@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.1.1\...HEAD[Unreleased]
+
+=== Added
+
+* Add doctests for `ImageEncoder` and `ImageDecoder`
+  ({pull-request-url}/20[#20])
+
 == {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2024-10-26
 
 === Changed
